# SAGE-Enterprise-Graph-RAG

./: .env  .env.example  .gitignore  AGENTS.md  README.md  SAGE-Agentic-NeuroSymbolic-Graph-RAG.md  backend.py  backend_readme.md  generate_report.py  graph_rag.py  message_processor.py  package-lock.json  performance_comparison.py  pipeline.py  pyproject.toml  pytest.ini  qa_pairs.json  requirements.txt  run_comprehensive_comparison.bat  run_performance_comparison.py  run_quick_comparison.bat  test_queries.json
AUGMENT GEN/: auth.py  chat_app.py  db.py  graph_integration.py
DOCUMENTATION/: CURRENT_IMPLEMENTATION.md  Example 1 - Manager Use Case.md  Example 2 - Auditor Use Case.md  PROGRESS_50_50_BALANCED.md  Presentation.md  SAGE-Agentic-NeuroSymbolic-Graph-RAG.md  SAIA-Overview.md
app/: __init__.py  backend.py  chat_store.py  document_ingestion.py  graph_rag.py  message_processor.py  pipeline.py  saia.py  services.py  utils.py
data/: chats.json  messages.json  users.json
files1/: Document 1 (Project Kickoff - EMP001 to EMP002, EMP004).txt  Document 2 (Data Analysis Report - EMP003 to EMP001).txt  Document 3 (Team Coordination - EMP004 to EMP002, EMP003).txt  Document 4 (HR Policy Update - EMP005 to All).txt  Document 5 (Project Status Update - EMP001 to EMP004).txt  ID Mappings.txt
results/: comparison_results.json  initial_comparison_results.json  initial_performance_report.html  performance_data_gemma2-9b-it_all-mpnet-base-v2.csv  performance_data_gemma2-9b-it_multi-qa-mpnet-base-dot-v1.csv  performance_data_llama-3.1-8b-instant_all-mpnet-base-v2.csv  performance_data_llama-3.1-8b-instant_multi-qa-mpnet-base-dot-v1.csv  performance_data_llama-3.3-70b-versatile_all-mpnet-base-v2.csv  (+4 more)
tests/: conftest.py  (+15 more)
(+48 files in other folders)
